# ftl

./: CMakeLists.txt
libftl/: CMakeLists.txt  files.txt
libftl/impl/src/impl/archive/: chain.cpp  filesystem.cpp  native.cpp
libftl/impl/src/impl/room/: draw.cpp
libftl/impl/src/impl/xml/: bom.cpp  document.cpp  document_output.cpp  file_to_string.cpp  inner_node.cpp  location_to_string.cpp  output.cpp  parse.cpp  remove_comments.cpp
libftl/include/libftl/: error.hpp  error_fwd.hpp  exception.hpp  exception_fwd.hpp
libftl/include/libftl/archive/: base.hpp  base_fwd.hpp  base_ref.hpp  base_unique_ptr.hpp  chain.hpp  entry.hpp  entry_fwd.hpp  entry_output.hpp  extract.hpp  file.hpp  file_fwd.hpp  filesystem.hpp  index.hpp  index_error.hpp  index_result.hpp  index_result_fwd.hpp  length.hpp  offset.hpp  open.hpp  open_error.hpp  open_error_fwd.hpp  open_path_error.hpp  open_path_error_fwd.hpp  path.hpp  path_fwd.hpp  read_index.hpp
libftl/include/libftl/blueprints/: data.hpp  data_fwd.hpp  error.hpp  error_fwd.hpp  find_ship.hpp  load.hpp
libftl/include/libftl/options/: create_resource_parser.hpp  data_file_label.hpp  native_resource_record.hpp  native_resource_record_fwd.hpp  open_archive.hpp  resource_file_label.hpp  resource_label.hpp  resource_parser.hpp  resource_parser_fwd.hpp  resource_path_label.hpp  resource_record.hpp  resource_record_fwd.hpp  resource_variant.hpp  resource_variant_fwd.hpp  unpacked_resource_record.hpp  unpacked_resource_record_fwd.hpp
libftl/include/libftl/room/: state.hpp  state_fwd.hpp  system.hpp  system_fwd.hpp  type.hpp  type_fwd.hpp
libftl/include/libftl/ship/: door.hpp  door_fwd.hpp  draw.hpp  ellipse.hpp  ellipse_fwd.hpp  images.hpp  images_fwd.hpp  initial_state.hpp  layout.hpp  layout_fwd.hpp  layout_output.hpp  load.hpp  load_error.hpp  load_error_fwd.hpp  load_images.hpp  name.hpp  name_fwd.hpp  parse_layout.hpp  resources.hpp  resources_fwd.hpp  room.hpp  room_fwd.hpp  room_id.hpp  state.hpp  state_fwd.hpp  tile_coordinate.hpp  tile_pos.hpp  tile_pos_fwd.hpp  tile_rect.hpp  tile_rect_fwd.hpp
libftl/include/libftl/ship/images/: error.hpp  error_fwd.hpp  load.hpp  name.hpp  name_fwd.hpp  object.hpp  object_fwd.hpp
libftl/include/libftl/ship/layout/: door.hpp  door_fwd.hpp  ellipse.hpp  ellipse_fwd.hpp  load.hpp  load_error.hpp  load_error_fwd.hpp  load_xml.hpp  load_xml_error.hpp  load_xml_error_fwd.hpp  name.hpp  name_fwd.hpp  object.hpp  object_fwd.hpp  output.hpp  parse.hpp  parse_error.hpp  parse_error_fwd.hpp  room.hpp  room_fwd.hpp  room_id.hpp  room_id_signed.hpp  tile_coordinate.hpp  tile_pos.hpp  tile_pos_fwd.hpp  tile_rect.hpp  tile_rect_fwd.hpp
libftl/include/libftl/sprite/: choices.hpp  choices_fwd.hpp  color.hpp  color_format.hpp  color_fwd.hpp  depth.hpp  depth_fwd.hpp  depth_role.hpp  draw.hpp  images.hpp  images_fwd.hpp  load_error.hpp  load_error_fwd.hpp  object.hpp  object_fwd.hpp  rect.hpp  rect_fwd.hpp  resolution.hpp  size_or_texture_size.hpp  size_or_texture_size_fwd.hpp  type_choices.hpp  type_choices_fwd.hpp  white.hpp
libftl/include/libftl/sprite/detail/: depth_element.hpp  depth_element_fwd.hpp
libftl/include/libftl/xml/: achievements.hpp  achievements_result.hpp  animations.hpp  blueprints.hpp  clean.hpp  error.hpp  error_fwd.hpp  events.hpp  node.hpp  node_output.hpp  parse.hpp  result.hpp  result_fwd.hpp  sector.hpp  sectors.hpp  ship.hpp  type_error.hpp  type_error_fwd.hpp
libftl/include/libftl/xml/achievements/: load.hpp  result.hpp
libftl/include/libftl/xml/animations/: anim.hpp  anim_sheet.hpp  load.hpp  result.hpp  weapon_anim.hpp
libftl/include/libftl/xml/blueprints/: aug.hpp  color.hpp  color_channel.hpp  crew.hpp  direction.hpp  direction_input.hpp  direction_output.hpp  direction_to_string.hpp  drone.hpp  item.hpp  list.hpp  load.hpp  load_2.hpp  result.hpp  result_output.hpp  ship.hpp  ship_system_list.hpp  sound_list.hpp  system.hpp  system_element.hpp  weapon.hpp
libftl/include/libftl/xml/errors/: alternative.hpp  attribute_conversion.hpp  content_conversion.hpp  content_empty.hpp  content_inner.hpp  excess_nodes.hpp  expected_node.hpp  inner_empty.hpp  invalid_node.hpp  mismatched_tags.hpp  missing_attribute.hpp  missing_node.hpp  multi_attribute.hpp  node_content.hpp  not_empty.hpp  unused_attributes.hpp  unused_nodes.hpp
libftl/include/libftl/xml/events/: auto_reward.hpp  boarders.hpp  choice.hpp  event.hpp  event_content.hpp  event_fwd.hpp  event_list.hpp  event_members.hpp  event_output.hpp  (+8 more)
libftl/src/archive/: base.cpp  chain.cpp  entry_output.cpp  extract.cpp  filesystem.cpp  index_error.cpp  open.cpp  open_error.cpp  open_path_error.cpp  path.cpp  read_index.cpp
libftl/src/blueprints/: data.cpp  error.cpp  find_ship.cpp  load.cpp
libftl/src/options/: create_resource_parser.cpp  open_archive.cpp
libftl/src/room/: state.cpp  system.cpp
libftl/src/ship/: draw.cpp  images.cpp  initial_state.cpp  layout.cpp  layout_output.cpp  load.cpp  load_error.cpp  load_images.cpp  parse_layout.cpp  resources.cpp  state.cpp
libftl/src/ship/images/: error.cpp  load.cpp  object.cpp
libftl/src/ship/layout/: load.cpp  load_error.cpp  load_xml.cpp  load_xml_error.cpp  object.cpp  output.cpp  parse.cpp  parse_error.cpp
libftl/src/sprite/: draw.cpp  images.cpp  load_error.cpp  resolution.cpp  white.cpp
libftl/src/xml/: achievements.cpp  animations.cpp  blueprints.cpp  clean.cpp  error.cpp  events.cpp  parse.cpp  sector.cpp  sectors.cpp  ship.cpp  type_error.cpp
libftl/src/xml/achievements/: load.cpp
libftl/src/xml/animations/: load.cpp
libftl/src/xml/blueprints/: direction_to_string.cpp  load.cpp  load_2.cpp  result.cpp
libftl/src/xml/errors/: alternative.cpp  node_content.cpp
libftl/src/xml/events/: event.cpp  event_members.cpp  load.cpp
libftl/src/xml/sectors/: load.cpp
libftl/src/xml/ship/: load.cpp  slide_to_string.cpp
programs/archive/: CMakeLists.txt  main.cpp
programs/draw/: CMakeLists.txt  main.cpp
programs/parse/: CMakeLists.txt  files.txt  main.cpp
programs/ship/: CMakeLists.txt  main.cpp
programs/xml/: CMakeLists.txt  main.cpp  parse.cpp
(+377 files in other folders)
